<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragments.EditTittleFragment">

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_end"
        app:hintEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtTittle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/string_tittle"
            android:textSize="@dimen/text_size_edittext" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_end"
        app:hintEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_link"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Link"
            android:textSize="@dimen/text_size_edittext" />

    </android.support.design.widget.TextInputLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_end"
        android:layout_marginBottom="@dimen/margin_end"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDone"
            android:layout_width="@dimen/option_button_width"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginEnd="@dimen/margin_end"
            android:background="@drawable/btn_gradient"
            android:text="@string/option_done"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_edittext" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/option_button_width"
            android:layout_height="@dimen/edittext_height"
            android:background="@drawable/btn_gradient"
            android:text="@string/option_cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_edittext" />
    </LinearLayout>


</LinearLayout>
